bluec-tests/tests/invalid/expr_sizeof/sizeof_void_array2.c
int main(void) {
    return sizeof(void[0]);
}